# Ethercat-softdrone-demo

./: .gitignore  .gitmodules  README.md
simulink/: Init_control450.m  sev.m  softdrone_pid.slx  test.m
simulink/+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
simulink/+bus_conv_fcns/+ros2/+busToMsg/+custom_msgs/: WriteDSHOT.m
simulink/+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
simulink/+bus_conv_fcns/+ros2/+msgToBus/+custom_msgs/: ReadSBUSRC.m
src/EcatV2_Master/: .gitignore  .gitmodules  readme.md
src/EcatV2_Master/docs/: configuration-generator.md  environment-setup.md  faq.md  first-run-test.md
src/EcatV2_Master/docs/task-info/: dji-motor.md  dji-rc.md  dm-motor.md  dshot.md  external-pwm.md  hipnuc-imu-can.md  lk-motor.md  ms5837-30ba.md  onboard-adc.md  onboard-pwm.md  pmu-can.md  sbus-rc.md  super-cap.md
src/EcatV2_Master/src/custom_msgs/: CMakeLists.txt  package.xml
src/EcatV2_Master/src/custom_msgs/msg/: ReadADC.msg  ReadCANPMU.msg  ReadDJIMotor.msg  ReadLkMotor.msg  ReadLkMotorMulti.msg  ReadMS5837BA30.msg  ReadSBUSRC.msg  WriteDJIMotor.msg  WriteDmMotorPositionControlWithSpeedLimit.msg  WriteDmMotorSpeedControl.msg  WriteExternalPWM.msg  WriteLkMotorBroadcastCurrentControl.msg  WriteLkMotorMultiRoundPositionControl.msg  WriteLkMotorMultiRoundPositionControlWithSpeedLimit.msg  WriteLkMotorOpenloopControl.msg  WriteLkMotorSingleRoundPositionControl.msg  WriteLkMotorSingleRoundPositionControlWithSpeedLimit.msg  WriteLkMotorSpeedControlWithTorqueLimit.msg  WriteOnBoardPWM.msg  WriteSuperCap.msg
src/EcatV2_Master/src/soem/: CMakeLists.txt  package.xml
src/EcatV2_Master/src/soem_wrapper/: CMakeLists.txt  package.xml
src/EcatV2_Master/src/soem_wrapper/config/: config.yaml
src/EcatV2_Master/src/soem_wrapper/include/soem_wrapper/: ecat_node.hpp  task_defs.hpp  wrapper.hpp
src/EcatV2_Master/src/soem_wrapper/include/soem_wrapper/utils/: config_utils.hpp  io_utils.hpp  logger_utils.hpp  sys_utils.hpp
src/EcatV2_Master/src/soem_wrapper/src/: ecat_node.cpp  soem_backend.cpp
src/EcatV2_Master/src/soem_wrapper/src/tasks/: dji_motor.cpp  dji_rc.cpp  dm_motor.cpp  dshot.cpp  hipnuc_imu_can.cpp  lk_motor.cpp  onboard_pwm.cpp  sbus_rc.cpp  super_cap.cpp
src/EcatV2_Master/src/soem_wrapper/src/utils/: config_utils.cpp  io_utils.cpp  logger_utils.cpp  sys_utils.cpp  task_utils.cpp
src/EcatV2_Master/tools/: eepromtool  simple_test  slaveinfo
src/soem_bringup/: CMakeLists.txt  package.xml
src/soem_bringup/config/: config.yaml
src/soem_bringup/launch/: bringup.launch.py
