<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>soem</name>
    <version>1.4.0</version>
    <description>SOEM</description>

    <maintainer email="sales@rt-labs.com">Open EtherCAT Society</maintainer>
    <license>GNU General Public License version 2</license>
    <url type="website">https://github.com/OpenEtherCATsociety/SOEM</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>